# cpp_examples

./: README.md  TODO.md
01_helloworld/: Dockerfile.clang  README.md  makefile.clang  makefile.gcc
01_helloworld_cmake/: README.md  default.nix  justfile  tools.nix
01_helloworld_make/: .gitignore  Dockerfile.clang  Dockerfile.gcc  README.md  makefile
02_nasm_lib/: README.md
02_queue/: README.md  main.cpp  makefile
03_disassemble/: .gitignore  README.md  helloworld.cpp
03_googletest_unittesting/: .gitignore  README.md  makefile  summer.cpp  summerMain.cpp  tools.nix
05_game_of_life/: .gitignore  README.md  board.cpp  board.hpp  board_unittest.cpp  flake.nix  main.cpp  makefile
06_nasm_lib/: .gitignore  Dockerfile.nasm  README.md  macmain.asm  main.asm
06_nasm_lib/linux/: CMakeLists.txt  helloworld.cpp  lib.asm  main.asm
07_disassemble/: .gitignore  README.md
08_sc68/: .gitignore  Dockerfile.sc68  Dockerfile.unice68  README.md  create-file-db.sh  music-info.sh
09_debugging/: Dockerfile.clang  README.md  helloworld  makefile
09_devcontainer/: README.md
10_conan/: CMakeLists.txt  README.md  build.sh  md5.cpp
10_conan2/: README.md  justfile
11_crasher/: .dockerignore  CMakeLists.txt  Dockerfile.build  README.md  conanfile.txt  crasher.cpp  default.nix  justfile
11_windows_devstudio/: .gitignore  11_windows_devstudio.cpp  11_windows_devstudio.sln  11_windows_devstudio.vcxproj  11_windows_devstudio.vcxproj.filters  README.md  conanbuildinfo.props  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  main.cpp  test.json
12_debugging/: .gitignore  (+8 more)
(+18 files in other folders)
